# PyPoolstation

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  testing_snippets.txt
PyPoolstation/: __init__.py
pypoolstation/: __init__.py
tests/: test_basic.py
