[tool.poetry]
name = "PyPoolstation"
version = "0.4.5"
description = "Python library to interact with the API of the Poolstation (https://poolstation.net) domotic platform for pool equipment"
authors = ["cibernox <miguel.camba@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
